# wolfenstein-engine-study

./: .gitignore  CMakeLists.txt  compile_commands.json
.github/workflows/: ci.yml
include/: logger.hpp
include/engine/: engine.hpp  pch.hpp
include/engine/core/: IComponentPool.hpp  IGame.hpp  application.hpp  component.hpp  display.hpp  engine.hpp  entity.hpp  geometry.hpp  render.hpp  vectors.hpp
include/engine/game/: game.hpp  window.hpp
include/game/: Game.hpp  GameRegistry.hpp  GameResourceManager.hpp  Map.hpp  MapSerializer.hpp  Player.hpp  Vectors.hpp
src/: main.cpp  old.bak
src/engine/core/: application.cpp  display.cpp  ecs.h  engine.cpp  render.cpp
src/engine/game/: game.cpp  window.cpp
src/engine/utils/: gmm.h
src/game/: Game.cpp  GameRegistry.cpp  GameResourceManager.cpp  MapSerializer.cpp  Player.cpp  scene.hpp
tests/: test_load_font_asset.cpp  test_map_serializer.cpp
